@@ -1,3 +1,4 @@
+2021. 5. 2. Renamed zVec3DArrayAppendList to zVec3DListAppendArray and changed specification. [zeo_vec3d_list]
 2021. 5. 2. Abolished zVec3DListReg. [zeo_vec3d_list]
 2021. 5. 2. Added zVec3DArrayAppendList and modified zVec3DArray2List. [zeo_vec3d_list]
 2021. 4.30. Debugged _zOBJFReadPH3D. [zeo_ph_obj]
